--- a/capp/templates/home.html
+++ b/capp/templates/home.html
@@ -7,17 +7,10 @@
 
     <div class="header_home">
       <div class="box"> 
-        <h1 style="font-size:55px;"><span class="text-logo" style="color: rgb(5, 5, 5);">Home</span></h1>
-        <p style="text-align:left; color:black;">
+        <h1 style="font-size:70px;"><span class="text-logo" style="color: #333;">Home</span></h1>
+        <p style="text-align:left; color:#333;">
             Test
         </p>
-      </div>
-      <div class="box">
-        <img 
-          src="{{url_for('static', filename='icons/carbon_app.svg')}}"
-          width="325" 
-          height="325"
-          alt=""/>
       </div>
     </div>
 
@@ -25,13 +18,19 @@
 </section> 
 
 <!-- Developers -->
+
+
 <section class="section_developers">
   <div class="container">
 
     <div class="developers" style="display:block;">
       <h1 style="text-align:center;"> Our Team</h1>
+    
       <p>
-        Our team of economists, innovators and art designer with diverse interests and backgrounds
+        
+Our team of student entrepreneurs has joined forces to develop a carbon-oriented app aimed at helping users calculate their carbon emissions. In the face of escalating climate change concerns, the team is driven by a shared mission to bridge the gap between awareness and action.
+Recognizing the pivotal role of individual contributions, the app intends to empower users by providing a user-friendly platform to measure and monitor their carbon footprint. By translating environmental consciousness into tangible impact, the team envisions their app as a catalyst
+for positive change, inspiring a community of environmentally conscious individuals to collectively address the urgent challenges of climate change.
       </p>      
     </div>
 
@@ -42,7 +41,12 @@
         <p>  Bachelors degree in Art Direction, Høyskolen Kristiania. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
         </p>
         <div class="section_container_buttons_developers">
-          <a class="btn_developers" href="https://www.linkedin.com/in/sofie-myklebust-b203a522a/" target="_blank" style="color: white;">LinkedIn</a>
+          <a class="btn_developers" href="https://www.linkedin.com/in/sofie-myklebust-b203a522a/" target="_blank">
+
+            
+<!-- Image til linkedin -->            
+            <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+          </a>
         </div> 
       </div>
       <div class="box">
@@ -51,7 +55,9 @@
         <p>  Bachelors degree in marketing, Innovation and Leadership, NTNU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
         </p>
         <div class="section_container_buttons_developers">
-          <a class="btn_developers" href="https://www.linkedin.com/in/jasper-john-baguio/" target="_blank" style="color: white;">LinkedIn</a>
+          <a class="btn_developers" href="https://www.linkedin.com/in/jasper-john-baguio/" target="_blank">
+            <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+          </a>
         </div>
       </div>           
       <div class="box">
@@ -60,7 +66,9 @@
         <p>  Bachelors degree in Social Econimoics NMBU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
         </p>
         <div class="section_container_buttons_developers">
-          <a class="btn_developers" href="https://www.linkedin.com/in/reinert-hjemdahl-2726801b8/" target="_blank" style="color: white;">LinkedIn</a>
+          <a class="btn_developers" href="https://www.linkedin.com/in/reinert-hjemdahl-2726801b8/" target="_blank">
+            <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+          </a>
         </div>
       </div>     
   </div>
@@ -72,7 +80,9 @@
       <p> Bachelors degree in Business and Administration, NMBU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
       </p>
       <div class="section_container_buttons_developers">
-        <a class="btn_developers" href="https://www.linkedin.com/in/annirenhaakenstad/" target="_blank" style="color: white;">LinkedIn</a>
+        <a class="btn_developers" href="https://www.linkedin.com/in/annirenhaakenstad/" target="_blank">
+          <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+        </a>
       </div>
     </div>
     <div class="box2">
@@ -81,7 +91,9 @@
       <p>  Bachelors degree in Innovation and Project Managment, Østfold University Collage. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
       </p>
       <div class="section_container_buttons_developers">
-        <a class="btn_developers" href="https://www.linkedin.com/in/christina-aast%C3%B8-8377897a/" target="_blank" style="color: white;">LinkedIn</a>
+        <a class="btn_developers" href="https://www.linkedin.com/in/christina-aast%C3%B8-8377897a/" target="_blank">
+          <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+        </a>
       </div>
     </div> 
     <div class="box">
@@ -90,7 +102,9 @@
       <p>  Bachelors degree in International Enviorment and Development studies, NMBU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
       </p>
       <div class="section_container_buttons_developers">
-        <a class="btn_developers" href="https://www.linkedin.com/in/thea-dyring-016b87234/" target="_blank" style="color: white;">LinkedIn</a>
+        <a class="btn_developers" href="https://www.linkedin.com/in/thea-dyring-016b87234/" target="_blank">
+          <img src="https://1000logos.net/wp-content/uploads/2023/01/LinkedIn-logo.png" alt="LinkedIn" style="height: 35px; width: 70px;">
+        </a>
       </div> 
     </div>         
 
