--- a/capp/static/carbon_app_form.css
+++ b/capp/static/carbon_app_form.css
@@ -9,7 +9,7 @@
 /* App Calculator Entry */
       /*Container section select entry*/
       .section_calculator_students_entry_css {
-        background: #2a4359;
+  background-color:#5b88c3;
         display: flex;
         align-items: start;
         justify-content: space-between;
