--- a/capp/static/layout.css
+++ b/capp/static/layout.css
@@ -2,8 +2,8 @@
 /* Rainy theme 5 -Green Digitalization Course and Students Apps-:
 Navbar (background): #8bbbd9
 Navbar (a hover): #466fa6
-Navbar (logo): #568c63
 Navbar (a menu): #2a4359
+Navbar (Logo): 77, #067d42
 */
 
 /* Google fonts Roboto  */
@@ -45,7 +45,7 @@ img {
 }
 /* Navbar  */
 .section_carbon_app_navbar {
-  background-color:#8bbbd9;
+  background-color:#fbfeff;
 }
 .carbon_app_navbar {
   display: flex;
@@ -53,7 +53,7 @@ img {
   justify-content: flex-start;
   height: 70px;
   align-items: center;
-  background-color: #8bbbd9;
+  background-color: #ffffff;
   padding: 0 0px;
 }
 .carbon_app_navbar a {
@@ -74,11 +74,11 @@ img {
   font-weight: 400;
 }
 .text-logo {
-  color: #568c63;
+  color: #067d42;
 }
 /* Footer  */
 .section_footer{
-  background-color:#8bbbd9;
+  background-color:#ffffff;
 }
 .footer {
   display: flex;
@@ -86,7 +86,7 @@ img {
   justify-content: center;
   height: 70px;
   align-items: center;
-  background-color: #8bbbd9;
+  background-color: #ffffff;
   padding: 0 0px;
 }
 
