--- a/capp/static/methodology.css
+++ b/capp/static/methodology.css
@@ -1,5 +1,5 @@
 /* Colors 
-Methodology, section 1 (header, background): #2a4359
+Methodology, section 1 (header, background): #bcab99
 Methodology, section 1 (header, boxes): #6da6a6
 Methodology, section 2 (methodology, background): #466fa6
 Methodology, section 2 (methodology, boxes): #8badd9
@@ -20,17 +20,18 @@ ol {
 }
 /* Section header */
 .section_header_methodology {
-  background-color:#2a4359;
+  background-color:#c5a061;
+  color: #067d42;
 }
 .header {
   display: flex;  
   align-items: start;
-  background: #2a4359;
+  background: #c5a061;
 }
 .header .box {
   flex: 1;
-  background: #2a4359;
-  color: #fff;
+  background: rgb(241, 198, 123);
+  color: #333;
   border-radius: 10px;
   margin: 20px 10px;
   padding: 15px 20px;
@@ -57,25 +58,26 @@ ol {
   width: 100px;
   height: 100px;
   background: #2a4359;
-  color: #fff;
+  color: #333;
   display: flex;
   justify-content:center;
   align-items:center;
 }
 /* Section methodology */
 .section_body_methodology {
-  background-color:#466fa6;
+  background-color:#c5a061;
 }
 .methodology {
   display: flex;  
   align-items: start;
-  background: #466fa6;
+  background: rgb(241, 198, 123);
+  border-radius: 10px;
 }
 /* Table with one column */
 .methodology .box_table1 {
   flex: 1;
-  background: #8badd9;
-  color: black;
+  background: #eab091;
+  color: #333;
   border-radius: 10px;
   margin: 10px 10px 10px 10px;
   padding: 15px 15px;
@@ -85,20 +87,21 @@ ol {
 }
 .methodology .box_table1:nth-of-type(1) {
   flex-grow:1;
-  background: #466fa6;
+  background: #eab091;
 }
 .methodology .box_table1:nth-of-type(2) {
   flex-grow:4;
 }
 .methodology .box_table1:nth-of-type(3) {
   flex-grow:1;
-  background: #466fa6;
+  background: #eab091;
+
 }
 /* Table with two columns */
 .methodology .box_table2 {
   flex: 1;
-  background: #8badd9;
-  color: black;
+  background: #eab091;
+  color: #333;
   border-radius: 10px;
   margin: 10px 10px 10px 10px;
   padding: 15px 15px;
@@ -108,11 +111,11 @@ ol {
 }
 .methodology .box_table2:nth-of-type(1) {
   flex-grow:1;
-  background: #8badd9;
+  background: #eab091;
 }
 .methodology .box_table2:nth-of-type(2) {
   flex-grow:1;
-  background: #8badd9;
+  background: #eab091;
 }
 
 
