--- a/capp/templates/layout.html
+++ b/capp/templates/layout.html
@@ -45,14 +45,15 @@
         <section class="section_carbon_app_navbar">
           <div class="container">
             <div class="carbon_app_navbar">
-              <h1 class="logo">
-                <span class="text-logo"><i class="fa-solid fa-leaf"></i> Carbon</span> App
-              </h1>
+              
+              <!-- Link the logo to the home page -->
+              <a href="{{url_for('home.home_home')}}">
+                <h1 class="logo">
+                  <span class="text-logo"><i class="fa-solid fa-earth-europe"></i> Home</span>
+                </h1>
+              </a>
               <nav>
                 <ul>
-                    <li>
-                        <a href="{{url_for('home.home_home')}}">Home</a>
-                    </li>
                     <li>
                         <a href="{{url_for('methodology.methodology_home')}}">Methology</a>
                     </li>
@@ -73,7 +74,7 @@
               <h1>
                 Carbon App 
                 <a href="#">
-                  <i class="fa-solid fa-circle-up" style="color: #568c63"></i>
+                  <i class="fa-solid fa-circle-up" style="color: #067d42"></i>
                 </a>
               </h1>
             </div>
