--- a/capp/templates/carbon_app/carbon_app.html
+++ b/capp/templates/carbon_app/carbon_app.html
@@ -7,7 +7,7 @@
     
         <div class="header_carbon_app">
             <div class="box"> 
-            <h1 style="font-size:55px;"><span class="text-logo" style="color: #024323;"> Carbon App Calculator</span></h1>
+            <h1 style="font-size:55px;"><span class="text-logo" style="color: #024323; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> Carbon App Calculator</span></h1>
             <p style="text-align:left;">
                 Using our carbon calculator focused on travel-related emissions is a straightforward process aimed at providing you as a user with insights into your transportation-related carbon footprint. 
                 In our calculator you will find fields prompting you to input details about your modes of transportation and distances traveled. 
@@ -28,7 +28,7 @@
                 <div class="modal-content">
           
                     <div class="modal-header">
-                    <h5 class="modal-title", style="color:black; text-align: center;">Carbon App, instructions</h5>
+                    <h5 class="modal-title", style="color:black; text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Carbon App, instructions</h5>
                     </div>
           
                     <div class="modal-body", style="color:black">
