--- a/capp/templates/layout.html
+++ b/capp/templates/layout.html
@@ -49,11 +49,14 @@
               <!-- Link the logo to the home page -->
               <a href="{{url_for('home.home_home')}}">
                 <h1 class="logo">
-                  <span class="text-logo"><i class="fa-solid fa-earth-europe"></i> Home</span>
+                  <span class="text-logo"><i class="fa-solid fa-earth-europe"></i> CarbonApp</span>
                 </h1>
               </a>
               <nav>
                 <ul>
+                  <li>
+                    <a href="{{url_for('home.home_home')}}">Home</a>
+                </li>
                     <li>
                         <a href="{{url_for('methodology.methodology_home')}}">Methology</a>
                     </li>
