--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -6,8 +6,8 @@
     <div class="container">
   
       <div class="header">
-        <div class="box"> 
-          <h1 style="font-size:55px;"><span class="text-logo" > Methodology</span></h1>
+        <div class="box" style="border: 10px solid #6ba840;"> 
+          <h1 style="font-size:55px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"><span class="text-logo" > Methodology</span></h1>
           <p style="text-align:left;">
             Our Carbon Tracker app is a specially designed platform that enables users to accurately monitor their CO2 emissions, particularly focusing on transportation. Utilizing a structured methodology, the app estimates emissions based on various transportation modes.
             To get precise calculations, users input specific details. For example, to assess emissions from a car journey, you'll need to enter the journey's length, the vehicle's type (electric, diesel, or gasoline), and passenger count. The app then applies these inputs to its algorithms to provide an estimated carbon emission figure.
@@ -22,7 +22,7 @@
             </div>
           </div>  
         </div>
-        <div class="box">
+        <div class="box" style="border: 10px solid #6ba840; height: 400px;">
           <img 
             src="https://cdn-icons-png.flaticon.com/512/1104/1104865.png" alt="Icon"
             width="325" 
@@ -43,25 +43,26 @@
           
         </div>
 
-        <div class="methodology" style="display:block; color: #000000; text-align:center;">
-            <h1>Our numbers and formulas</h1>
-            <p style="padding-top: 5px; color: #010600; text-align:center;">
+        <div class="methodology" style="display:block; color: #333; text-align:center; border: 10px solid #6ba840; width: 1280px; margin-left: 16.8%; margin-bottom: 50px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+            <h1>Numbers and formulas:</h1>
+            <p style="padding-top: 5px; color: #333; text-align:center;">
                 We are going to study some \(\LaTeX ~ formulas\) that could be useful for our project:
             </p> 
         </div>
 
         <!--Enumerated list (table with two columns)-->
         <div class="methodology"> 
-            <div class="box_table2" style="height:650px;">
+            <div class="box_table2" style="height:650px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 90px;">
                 <ol start="1">
                     <li>
                         <h4>General formula </h4>
                         <p class="text-left">
-                            To ensure precise carbon emission calculations for our users, the application utilizes a universal formula. This formula integrates emission factors, particularly focusing on transportation involving fossil fuels, to deliver accurate results.
+                            To ensure precise carbon emission calculations for our users, the application utilizes a universal formula. 
+                            This formula integrates emission factors, particularly focusing on transportation involving fossil fuels, to deliver accurate results.
                             <br>
                             \[\text{CO}_{2}=d*\frac{ef}{p}\]
                             <br>
-                            In witch:
+                            In which:
                                \[\text{CO}_2 \text{ = carbon emissions in grams} \]
                                \[\text{d} \text{ = distance traveled in km} \]
                                \[\text{ef} \text{ = emission factor in CO}_2 \text{/km} \]
@@ -71,7 +72,7 @@
                     </li>
                 </ol>                        
             </div>
-            <div class="box_table2" style="height:650px;">
+            <div class="box_table2" style="height:650px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
                 <ol start="2">
                     <li>
                         <h4>Formula for electrical transportation modes</h4>
@@ -86,7 +87,7 @@
                             <br>
                             \[ \text{ef = 31 * ec} \]
                             <br>
-                            In witch:
+                            In which:
                                \[\text{ef} \text{ = emission factor in CO}_2 \text{/km} \]
                                \[\text{31} \text{ = dcarbon intensity in gCO}_2 \text{/kwh} \]
                                \[\text{ec} \text{ = energy consumption in kWh} \text{/km} \]
@@ -99,7 +100,7 @@
 
         <!--Enumerated list (table with two columns)-->
         <div class="methodology"> 
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 90px;">
                 <ol start="3">
                     <li>
                         <h4>Car</h4>
@@ -115,7 +116,7 @@
                     </li>
                 </ol>                        
             </div>
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
                 <ol start="5">
                     <li>
                         <h4>Ferry</h4>
@@ -136,10 +137,10 @@
 
                 <!--Enumerated list (table with two columns)-->
         <div class="methodology"> 
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 90px;">
                 <ol start="7">
                     <li>
-                        <h4>Ferry</h4>
+                        <h4>Train</h4>
                         <p class="text-left">
                             When looking up the carbon emissions for the train, they differed a bit per country. However, since the
                             application is focussed on use in Bergen, it will use information from the 2022 annual report of Vy (“When
@@ -152,7 +153,7 @@
                     </li>
                 </ol>                        
             </div>
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
                 <ol start="9">
                     <li>
                         <h4>Airplane</h4>
@@ -168,7 +169,7 @@
 
          <!--Enumerated list (table with two columns)-->
          <div class="methodology"> 
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 90px;">
                 <ol start="7">
                     <li>
                         <h4>Bus</h4>
@@ -187,7 +188,7 @@
                     </li>
                 </ol>                        
             </div>
-            <div class="box_table2" style="height:400px;">
+            <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
                 <ol start="9">
                     <li>
                         <h4>Motorcycle</h4>
@@ -209,7 +210,7 @@
         <!--Enumerated list (table with one column)-->
         <div class="methodology">              
     
-            <div class="box_table1">
+            <div class="box_table1" style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 1740px; padding-bottom: 20px; margin: 0 auto;">
                 <ol>
                     <li>
                         <h4>Walking and cycling</h4>
@@ -220,8 +221,7 @@
                             cycling. This will be shown in the charts and tables.
                         </p>
                     </li>
-                    
-                </ol>                        
+                </ol>
             </div>
         
                       
