--- a/capp/static/methodology.css
+++ b/capp/static/methodology.css
@@ -70,13 +70,17 @@ ol {
 .methodology {
   display: flex;  
   align-items: start;
-  background: rgb(241, 198, 123);
+  background: #6ba840;
   border-radius: 10px;
+  width: 1800px;
+  align-items: center; 
+  justify-content: center;
+  
 }
 /* Table with one column */
 .methodology .box_table1 {
   flex: 1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
   color: #333;
   border-radius: 10px;
   margin: 10px 10px 10px 10px;
@@ -87,20 +91,20 @@ ol {
 }
 .methodology .box_table1:nth-of-type(1) {
   flex-grow:1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
 }
 .methodology .box_table1:nth-of-type(2) {
   flex-grow:4;
 }
 .methodology .box_table1:nth-of-type(3) {
   flex-grow:1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
 
 }
 /* Table with two columns */
 .methodology .box_table2 {
   flex: 1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
   color: #333;
   border-radius: 10px;
   margin: 10px 10px 10px 10px;
@@ -111,11 +115,11 @@ ol {
 }
 .methodology .box_table2:nth-of-type(1) {
   flex-grow:1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
 }
 .methodology .box_table2:nth-of-type(2) {
   flex-grow:1;
-  background: #eab091;
+  background: rgb(241, 198, 123);
 }
 
 
