--- a/capp/static/methodology.css
+++ b/capp/static/methodology.css
@@ -101,29 +101,34 @@ ol {
   background: rgb(241, 198, 123);
 
 }
-/* Table with two columns */
+/* Ensuring the methodology container is a flex container */
+.methodology {
+  display: flex;
+  justify-content: center; /* Center children horizontally */
+  align-items: center; /* Center children vertically */
+  flex-wrap: wrap; /* Allow the items to wrap if needed */
+  /* Add any additional styles needed for the container */
+}
+
+/* Styles for each box_table2 */
 .methodology .box_table2 {
   flex: 1;
   background: rgb(241, 198, 123);
   color: #333;
   border-radius: 10px;
-  margin: 10px 10px 10px 10px;
-  padding: 15px 15px;
-  text-align:center;
-  align-items: center;
-  justify-content: center;
+  margin: 10px;
+  padding: 15px;
+  text-align: center;
+  /* Removed align-items and justify-content as they have no effect on flex items */
 }
-.methodology .box_table2:nth-of-type(1) {
-  flex-grow:1;
-  background: rgb(241, 198, 123);
-}
+
+.methodology .box_table2:nth-of-type(1),
 .methodology .box_table2:nth-of-type(2) {
-  flex-grow:1;
-  background: rgb(241, 198, 123);
+  flex-grow: 1;
 }
 
-
-@media (max-width:768px) { 
+/* Media query for smaller screens */
+@media (max-width: 768px) { 
   .header {
     flex-direction: column;
   } 
