--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -46,7 +46,7 @@
         <div class="methodology" style="display:block; color: #333; text-align:center; border: 10px solid #6ba840; width: 1280px; margin-left: 16.8%; margin-bottom: 50px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
             <h1>Numbers and formulas:</h1>
             <p style="padding-top: 5px; color: #333; text-align:center;">
-                We are going to study some \(\LaTeX ~ formulas\) that could be useful for our project. This methodology was copied from the group Carbon Compass. 
+                We are going to study some \(\LaTeX ~ formulas\) that could be useful for our project. This methodology was copied from the group Carbon
             </p> 
         </div>
 
@@ -117,7 +117,7 @@
                 </ol>                        
             </div>
             <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
-                <ol start="5">
+                <ol start="4">
                     <li>
                         <h4>Ferry</h4>
                         <p class="text-left">
@@ -138,7 +138,7 @@
                 <!--Enumerated list (table with two columns)-->
         <div class="methodology"> 
             <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-left: 90px;">
-                <ol start="7">
+                <ol start="5">
                     <li>
                         <h4>Train</h4>
                         <p class="text-left">
@@ -154,7 +154,7 @@
                 </ol>                        
             </div>
             <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
-                <ol start="9">
+                <ol start="6">
                     <li>
                         <h4>Airplane</h4>
                         <p class="text-left">
@@ -189,7 +189,7 @@
                 </ol>                        
             </div>
             <div class="box_table2" style="height:400px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-right: 90px;">
-                <ol start="9">
+                <ol start="8">
                     <li>
                         <h4>Motorcycle</h4>
                         <p class="text-left">
@@ -211,7 +211,7 @@
         <div class="methodology">              
     
             <div class="box_table1" style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 1740px; padding-bottom: 20px; margin: 0 auto;">
-                <ol>
+                <ol start="9">
                     <li>
                         <h4>Walking and cycling</h4>
                         <p class="text-left">
