--- a/capp/templates/home.html
+++ b/capp/templates/home.html
@@ -85,7 +85,7 @@
       <div class="box" style=" border: 10px solid #448f5a;">
         <img src="https://media.licdn.com/dms/image/D4D03AQHn16lPREVFmw/profile-displayphoto-shrink_800_800/0/1699436946635?e=1704931200&v=beta&t=SDQU52WLTjq4s_-AxUgiAXfrgrmv7PVpqzZ6z0DJAaE" alt="" style="border-radius: 50%; width:200px;">
         <h3>Jasper John Baguio</h3>
-        <p>  Bachelor's degree in Marketing, Innovation and Leadership, NTNU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
+        <p>  Bcs in Marketing, Innovation and Leadership, NTNU. Currently studying Masters in Entrepreneurship and Innovation at NMBU.
         </p>
         <div class="section_container_buttons_developers">
           <a class="btn_developers" href="https://www.linkedin.com/in/jasper-john-baguio/" target="_blank">
