--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -14,7 +14,7 @@
           </p>
           <div class="container_buttons_links_header">
             <div class="btn">
-
+<!-- Her skal vi legge inn rapporten -->
   <a href="#" class="btn btn-primary btn-lg mr-2", style="background-color: #067d42;">Paper</a>
             </div>
             <div class="btn">
