--- a/capp/static/carbon_app.css
+++ b/capp/static/carbon_app.css
@@ -28,7 +28,7 @@ h4 {
 .header_carbon_app .box {
   flex: 1;
   background: #466fa6;
-  color: #333;
+  color: #ffffff;
   border-radius: 10px;
   margin: 20px 10px;
   padding: 15px 20px;
