--- a/capp/static/methodology.css
+++ b/capp/static/methodology.css
@@ -72,6 +72,7 @@ ol {
   align-items: start;
   background: #6ba840;
   border-radius: 10px;
+  display: flex;
   align-items: center; 
   justify-content: center;
   
