--- a/capp/static/methodology.css
+++ b/capp/static/methodology.css
@@ -85,6 +85,7 @@ ol {
   border-radius: 10px;
   margin: 10px 10px 10px 10px;
   padding: 15px 15px;
+  display: flex;
   text-align:center;
   align-items: center;
   justify-content: center;
