--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -38,17 +38,17 @@
     <div class="container">
 
     </div>
-
         <div class="methodology" style="display:block;">
           
-        </div>
+    </div>
 
-        <div class="methodology" style="display:block; color: #333; text-align:center; border: 10px solid #6ba840; width: 1280px; margin-left: 16.8%; margin-bottom: 50px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+        <div class="methodology" style="display:block; color: #333; text-align:center; border: 10px solid #6ba840; width: 1280px; margin: 0 auto 50px auto; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
             <h1>Numbers and formulas:</h1>
             <p style="padding-top: 5px; color: #333; text-align:center;">
                 We are going to study some \(\LaTeX ~ formulas\) that could be useful for our project. This methodology was copied from the group Carbon Compass
             </p> 
         </div>
+        
 
         <!--Enumerated list (table with two columns)-->
         <div class="methodology"> 
