--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -35,13 +35,9 @@
 
 <!-- Methodology -->
 <section class="section_body_methodology">
-    <div class="container">
-
+    <div class="container"></div>
+    <div class="methodology" style="display:block;">
     </div>
-        <div class="methodology" style="display:block;">
-          
-    </div>
-
         <div class="methodology" style="display:block; color: #333; text-align:center; border: 10px solid #6ba840; width: 1280px; margin: 0 auto 50px auto; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
             <h1>Numbers and formulas:</h1>
             <p style="padding-top: 5px; color: #333; text-align:center;">
