--- a/capp/templates/methodology.html
+++ b/capp/templates/methodology.html
@@ -15,7 +15,7 @@
           <div class="container_buttons_links_header">
             <div class="btn">
 <!-- Her skal vi legge inn rapporten -->
-  <a href="#" class="btn btn-primary btn-lg mr-2", style="background-color: #067d42;">Paper</a>
+                <a href="/static/eksamen/eksamen.pdf" class="btn btn-primary btn-lg mr-2", style="background-color: #067d42;">Paper</a>
             </div>
             <div class="btn">
                 <a href="{{url_for('carbon_app.carbon_app_home')}}" class="btn btn-primary btn-lg mr-2", style="background-color: #067d42;">Carbon App</a>
