--- a/capp/templates/layout.html
+++ b/capp/templates/layout.html
@@ -61,7 +61,7 @@
                         <a href="{{url_for('methodology.methodology_home')}}">Methology</a>
                     </li>
                     <li>
-                        <a href="{{url_for('carbon_app.carbon_app_home')}}">Carbon App</a>
+                        <a href="{{url_for('carbon_app.carbon_app_home')}}">Carbon Calculator</a>
                     </li>
                 </ul>
               </nav> 
